syntax = "proto3";

package gatekv_user;

service GateKV_User {
    rpc RecvSet (SetResponse) returns (Empty) {}
    rpc RecvGet (GetResponse) returns (Empty) {}
    rpc RecvRem (RemResponse) returns (Empty) {}
}

message SetResponse {
    bool success = 1;
}

message GetResponse {
    bool success = 1;
    string value = 2;
}

message RemResponse {
    bool success = 1;
}

message Empty {
    // Empty body
}